--- a/YCC482.md
+++ b/YCC482.md
@@ -13,4 +13,7 @@ It would be good if the video open towards the top of the screen instead on the 
 
 Collection of questions from internal testing
 
-### Q: Are you planning on showing the camera from where the person is bussing? Ex the garage buzzer or the P1 buzzer
+### Q: Are you planning on showing the camera from where the person is bussing? Ex the garage buzzer or the P1 buzzer?
+
+Not yet. There is no camera near P1 buzzer. We have one camera looking at the entrance ramp, where you would see at least the car from behind. I'm not sure how that would be useful.
+Also, there is currently no way to detect inside the application from where the person is buzzing, unfortunatelly. If the main entrance works, will try to expand to garage feed as well.
