--- a/YCC482.md
+++ b/YCC482.md
@@ -6,7 +6,8 @@
 Collection of suggestions from internal testing
 
 ### Video feed location on screen
-The video feed opens and covers the keypad button. I have to move the video up to access the key pad button. Small thing. 
+
+Suggestion: The video feed opens and covers the keypad button. I have to move the video up to access the key pad button. Small thing. 
 It would be good if the video open towards the top of the screen instead on the middle.
 
 ## Frequently asked questions
