--- a/YCC482.md
+++ b/YCC482.md
@@ -18,3 +18,7 @@ Collection of questions from internal testing
 
 Not yet. There is no camera near P1 buzzer. We have one camera looking at the entrance ramp, where you would see at least the car from behind. I'm not sure how that would be useful.
 Also, there is currently no way to detect inside the application from where the person is buzzing, unfortunatelly. If the main entrance works, will try to expand to garage feed as well.
+
+### Q: Will there be away to pull up the video without someone calling?
+
+There was no plan to make the feed available on demand. Need to gather use-cases to justify it. IMHO, people might have concerns around anybody watching cameras but maybe that is not the case.
